  to file in XML format
- "corrgm" command: clarify the role of Barlett standard
  errors for the ACF
- "omit" command: extend the --auto option to support use of
  information criteria
- "delete" command: ensure that an informative message is
  shown when some series cannot be deleted
- "setobs" syntax: accept month as single digit for panel
  data with monthly time dimension
- distance() function: treat the Mahalanobis metric in the
  same way as all the other supported metrics
- new function lnmgamma(): multivariate log gamma function
- slight speedup for forward stepwise regression code
- command-line syntax: accept trailing ';' as calling for
  line continuation (except in the "smpl" command)
- function packages: add apparatus to specify that the
  return value of a given public function must be assigned,
  in GUI usage
- printing of a bundle with the --tree option: clarify the
  structure
- Fix bug: potential crash in GTK file chooser dialog
- Fix bug: incorrect Bartlett band in ACF + PACF plot
- Fix bug: memory leak in some cases of loop code
- Fix bug: possible spurious error from "smpl" command
- Fix bug: a series could be wrongly taken to be a lag of
  another series
- GUI: ensure that the separator between the main window
  and the "swallowed" console can be grabbed via the mouse
- GUI: fix background of the "icon view" window when a dark
  theme is active
- GUI: support opening gfn "spec" file via command-line or
  drag-and-drop
- GUI: ensure that the special strings "[null]" and "[auto]"
  are not offered as the default names for lists
- GUI: offer a more direct way to view a graph in the Icon
  View window using gnuplot
- GUI: plot context menu: add option to view the gnuplot
  commands that generated the plot

2025-06-05 version 2025b
- gretlcli: add --no-plots option to suppress plots
- "add" command: add an --auto option for forward stepwise
  regession via QR algorithm
- new function thresh() for hard and soft thresholding