@@ -83,7 +83,7 @@ int add_dbnomics_data (windata_t *vwin);
 
 int show_dbnomics_data (windata_t *vwin, int plot);
 
-void dbnomics_search (gchar *key, windata_t *vwin);
+void dbnomics_search (gchar *key, windata_t *vwin, int stype);
 
 void maybe_fill_dbn_finder (GtkWidget *entry);
 
